--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@
 
     <!-- 에러 메시지 표시 (로그인 실패 시) -->
     <p th:if="${param.error}" class="error">
-        Invalid username or password!
+        ID나 비밀번호가 잘못되었습니다.
     </p>
 </div>
 </body>
