--- a/src/main/resources/templates/search_result.html
+++ b/src/main/resources/templates/search_result.html
@@ -25,8 +25,10 @@
                 <strong>주소:</strong>
                 <span th:text="${patient.address}"></span>
             </p>
+            <button class="register-btn" th:attr="data-id=${patient.id}">접수</button>
         </div>
     </div>
 </div>
+
 </body>
 </html>
