--- a/src/main/resources/templates/search_result.html
+++ b/src/main/resources/templates/search_result.html
@@ -27,6 +27,7 @@
                 <span th:text="${patient.address}"></span>
             </p>
             <button class="register-btn" th:attr="data-id=${patient.id}">접수</button>
+            <button class="appointment-btn" th:attr="data-id=${patient.id}">예약</button>
         </div>
     </div>
 </div>
