--- a/src/main/resources/static/css/nurse_style.css
+++ b/src/main/resources/static/css/nurse_style.css
@@ -308,7 +308,8 @@ body {
     background-color: #F9F9F9;
 }
 /* 신규 환자 등록 버튼 스타일 */
-.new-patient-btn {
+.new-patient-btn,
+.new-appointment-btn {
     padding: 10px 15px;
     background-color: #2E86C1;
     color: white;
@@ -316,7 +317,8 @@ body {
     border-radius: 4px;
     cursor: pointer;
 }
-.new-patient-btn:hover {
+.new-patient-btn:hover,
+.new-appointment-btn:hover {
     background-color: #1B4F72;
 }
 
